exports[`WarningModal Modal should disappear after clicking on accept button 1`] = `
<WarningModal>
  <Dialog
    actions={
      Array [
        <FlatButton
          disabled={false}
          keyboardFocused={true}
          label="Accept"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />,
      ]
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    modal={false}
    onRequestClose={[Function]}
    open={true}
    repositionOnUpdate={true}
    style={
      Object {
        "zIndex": 2147483647,
      }
    }
    title="Warning you are in production">
    <RenderToLayer
      open={true}
      render={[Function]}
      useLayerForClickAway={false} />
  </Dialog>
</WarningModal>
`;

exports[`WarningModal Modal should disappear after clicking on accept button 2`] = `
<WarningModal>
  <Dialog
    actions={
      Array [
        <FlatButton
          disabled={false}
          keyboardFocused={true}
          label="Accept"
          labelPosition="after"
          labelStyle={Object {}}
          onKeyboardFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          primary={true}
          secondary={false} />,
      ]
    }
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    modal={false}
    onRequestClose={[Function]}
    open={false}
    repositionOnUpdate={true}
    style={
      Object {
        "zIndex": 2147483647,
      }
    }
    title="Warning you are in production">
    <RenderToLayer
      open={true}
      render={[Function]}
      useLayerForClickAway={false} />
  </Dialog>
</WarningModal>
`;
